--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-body{
-    background-color: #FDFAF6;
+body {
+    background-color: #F5F5F5;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     text-align: center;
@@ -8,7 +8,7 @@ body{
 h1 {
     color:#125f32;
     margin: 50px auto 0 auto;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Times', sans-serif;
     font-size: 5.625rem;
 }
 
@@ -93,17 +93,17 @@ a {
 }
 
 .body {
-    background-color: #FAF1E6;
+    background-color: #F5F5F5;
 }
 
 .top-container {
-    background-color: #FAF1E6;
+    background-color: #f5f5f5;
     position: relative;
     padding-top: 100px;
 }
 
 .middle-container {
-    background-color: #FAF1E6;
+    background-color: #F5F5F5;
     position: relative;
     padding-top: 0;
 }
@@ -125,56 +125,12 @@ a {
     bottom: 300px
 }
 
-/* Button CSS */
-/*
-.btn {
-    background: #064420;
-    background-image: -webkit-linear-gradient(top, #064420, #125f32);
-    background-image: -moz-linear-gradient(top, #064420, #125f32);
-    background-image: -ms-linear-gradient(top, #064420, #125f32);
-    background-image: -o-linear-gradient(top, #064420, #125f32);
-    background-image: -webkit-gradient(to bottom, #064420, #125f32);
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    color: #FAF1E6;
-    font-family: Roboto;
-    font-size: 1.25rem;
-    font-weight: 100;
-    padding: 10px;
-    -webkit-box-shadow: 1px 1px 20px 0 #000000;
-    -moz-box-shadow: 1px 1px 20px 0 #000000;
-    box-shadow: 1px 1px 20px 0 #000000;
-    text-shadow: 1px 1px 20px #000000;
-    border: solid;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
- }
- 
- .btn:hover {
-    border: solid;
-    background: #125f32;
-    background-image: -webkit-linear-gradient(top, #064420, #125f32);
-    background-image: -moz-linear-gradient(top, #064420, #125f32);
-    background-image: -ms-linear-gradient(top, #064420, #125f32);
-    background-image: -o-linear-gradient(top, #064420, #125f32);
-    background-image: -webkit-gradient(to bottom, #064420, #125f32);
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    color:antiquewhite;
-    text-decoration: none;
- }
- */
-
  .btn {
     -webkit-border-radius: 7;
     -moz-border-radius: 7;
     border-radius: 7px;
     font-family: Georgia;
-    color: #FAF1E6;
+    color: #F5F5F5;
     font-size: 20px;
     background: #125f32;
     padding: 10px 20px 10px 20px;
