update text and change styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,22 @@ h3 {
     font-family: 'Monserrat', sans-serif;
 }
 
+hr {
+    width: 0%;
+    min-width: 20%;
+    max-width: 100%;
+    margin: 0 auto;
+    border: none;
+    border-bottom: 1px solid #666;
+    position: relative;
+    transition: box-shadow 200ms ease-in-out;
+    box-shadow: 0px 0px 0px 0px #f9f9f9;
+  }
+  
+  hr.activated {
+    box-shadow: 0px 4px 0px 0px #666;
+  }
+
 a {
     color: #E4EFE7;
 }
